# task-reminder

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
task_reminder/: __init__.py  main.py  notes_reader.py  notifier.py  scheduler.py  state.py
