[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-reminder"
version = "0.1.0"
description = "Smart task reminder app that reads from Apple Notes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "rumps>=0.4.0",
    "pync>=2.0.0",
    "blackboxprotobuf>=1.0.1",
]

[project.scripts]
task-reminder = "task_reminder.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["task_reminder*"]
